--- a/index.html
+++ b/index.html
@@ -361,23 +361,24 @@
 
         <!-- More -->
         <div class="section">
-            <div class="container" tyle="font-size:15px;">
+            <div class="container">
                 <div class="row">
                     <div class="col-xs-2">
                         <!-- empty column-->
                     </div><!-- /.column-->
                     <div class="col-xs-8 text-center">
                         <br>
-                        <a href="http://www.instagram.com/theannielin" target="_blank"> 
-                              <i class="fa fa-instagram"></i>
-                        </a>
-                        <a href="http://thelittleorphanannie.tumblr.com/archive" target="_blank"> 
-                              <i class="fa fa-tumblr"></i>
-                        </a>
-                        <a href="http://www.youtube.com/channel/UC4xmxjVcO3qGnQ7Y_hZlDnw" target="_blank"> 
-                              <i class="fa fa-youtube"></i>
-                        </a>
-                        <br>
+                        <div style="font-size:40px;">
+                            <a href="http://www.instagram.com/theannielin" target="_blank"> 
+                                  <i class="fa fa-instagram"></i>
+                            </a>
+                            <a href="http://thelittleorphanannie.tumblr.com/archive" target="_blank"> 
+                                  <i class="fa fa-tumblr"></i>
+                            </a>
+                            <a href="http://www.youtube.com/channel/UC4xmxjVcO3qGnQ7Y_hZlDnw" target="_blank"> 
+                                  <i class="fa fa-youtube"></i>
+                            </a>
+                        </div>
                         <h1> SEE THE WORLD THROUGH MY EYES</h1>
                         <a class="btn btn-default btn-sm" href="#coffee" data-toggle="modal"> 
                             <i class="fa fa-coffee"></i> 
