--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                                   <i class="fa fa-instagram"></i>
                             </a>
                             <a href="http://thelittleorphanannie.tumblr.com/archive" target="_blank"> 
-                                  <i class="fa fa-tumblr"></i>
+                                  <i class="fa fa-tumblr-square"></i>
                             </a>
                             <a href="http://www.youtube.com/channel/UC4xmxjVcO3qGnQ7Y_hZlDnw" target="_blank"> 
                                   <i class="fa fa-youtube"></i>
