--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                                   <i class="fa fa-tumblr-square"></i>
                             </a>
                             <a href="http://www.youtube.com/channel/UC4xmxjVcO3qGnQ7Y_hZlDnw" target="_blank"> 
-                                  <i class="fa fa-youtube"></i>
+                                  <i class="fa fa-youtube-sqaure"></i>
                             </a>
                         </div>
                         <h1> SEE THE WORLD THROUGH MY EYES</h1>
