--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
     <!-- Coffee Modal  -->
     <div class="portfolio-modal modal fade" id="coffee" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
-            <div class="close-modal hidden-xs" data-dismiss="modal">
+            <div class="close-modal " data-dismiss="modal">
                 <div class="lr">
                     <div class="rl">
                     </div>
@@ -459,11 +459,15 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <div class="modal-body">
-                            <!-- Change the width and height values to suit you best -->
-                            <div class="typeform-widget" data-url="https://annie33.typeform.com/to/JJAQvb" data-text="Coffee Appointments" style="width:400px;height:500px; margin: 0 auto;"></div>
-                            <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
-                            <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;">Powered by <a href="http://www.typeform.com/?utm_campaign=typeform_JJAQvb&amp;utm_source=website&amp;utm_medium=typeform&amp;utm_content=typeform-embedded&amp;utm_term=English" style="color: #999" target="_blank">Typeform</a></div>
-
+                            <h1>Hi! I'm Annie!<br>
+                            I'm always excited to meet (or re-meet) people.<br>
+                            I would love to have a chat over coffee<br>
+                            (or any other beverage of your choice).<br>
+                            Let's grab a drink!<br></h1>
+                            <a class="btn btn-default btn-sm" href="mailto:theannielin@gmail.com?subject=Coffee%20Scheduling&body=Note-%20Please%20fill%20out:%0A%0AName:%20%0ADates/Times:%20%0ALocation:%20%0APhone:%20%0A"> 
+                                <i class="fa fa-coffee"></i> 
+                            </a>
+                            <h1>I will e-mail back you to<br>either confirm or reschedule!</h1>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close Window</button>
                         </div>
                     </div>
