--- a/index.html
+++ b/index.html
@@ -464,12 +464,14 @@
                             I would love to have a chat over coffee<br>
                             (or any other beverage of your choice).<br>
                             Let's grab a drink!<br></h1>
-                            <a href="mailto:theannielin@gmail.com?subject=Coffee%20Scheduling&body=Note-%20Please%20fill%20out:%0A%0AName:%20%0ADates/Times:%20%0ALocation:%20%0APhone:%20%0A"> 
-                                <span class="fa-stack fa-lg">
-                                  <i class="fa fa-circle fa-stack-2x"></i>
-                                  <i class="fa fa-coffee fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
+                            <div style="font-size:40px;">
+                                <a href="mailto:theannielin@gmail.com?subject=Coffee%20Scheduling&body=Note-%20Please%20fill%20out:%0A%0AName:%20%0ADates/Times:%20%0ALocation:%20%0APhone:%20%0A"> 
+                                    <span class="fa-stack fa-lg">
+                                      <i class="fa fa-circle fa-stack-2x"></i>
+                                      <i class="fa fa-coffee fa-stack-1x fa-inverse"></i>
+                                    </span>
+                                </a>
+                            </div>
                             <h1>I will e-mail back you to<br>either confirm or reschedule!</h1>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close Window</button>
                         </div>
