--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
     <!-- Coffee Modal  -->
     <div class="portfolio-modal modal fade" id="coffee" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
-            <div class="close-modal " data-dismiss="modal">
+            <div class="close-modal hidden-xs" data-dismiss="modal">
                 <div class="lr">
                     <div class="rl">
                     </div>
@@ -457,12 +457,12 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <div class="modal-body">
-                            <h1>Hi! I'm Annie!<br>
+                            <h1 style="font-size:15px;">Hi! I'm Annie!<br>
                             I'm always excited to meet (or re-meet) people.<br>
                             I would love to have a chat over coffee<br>
                             (or any other beverage of your choice).<br>
                             Let's grab a drink!<br></h1>
-                            <div style="font-size:40px;">
+                            <div style="font-size:35px;">
                                 <a href="mailto:theannielin@gmail.com?subject=Coffee%20Scheduling&body=Note-%20Please%20fill%20out:%0A%0AName:%20%0ADates/Times:%20%0ALocation:%20%0APhone:%20%0A"> 
                                     <span class="fa-stack fa-lg">
                                       <i class="fa fa-circle fa-stack-2x"></i>
@@ -470,7 +470,7 @@
                                     </span>
                                 </a>
                             </div>
-                            <h1>I will e-mail back you to<br>either confirm or reschedule!</h1>
+                            <h1 style="font-size:15px;">I will e-mail back you to<br>either confirm or reschedule!</h1>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close Window</button>
                         </div>
                     </div>
