--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@
         <div class="container text-center">
             <br>
             <div style="font-size:30px; font-family: passiontea;">
-                <a class="page-scroll" href="#home">home</a>
+                <a class="page-scroll" href="#home">home</a> | 
                 <a class="page-scroll" href="#about">about</a> | 
                 <a class="page-scroll" href="#home" id="cog">
                     <i class="fa fa-cog fa-spin fa-2x"></i>
                 </a>
                 <a class="page-scroll" href="#resume">resume</a> 
-                <a class="page-scroll" href="#projects">projects</a> | 
+                <a class="page-scroll" href="#projects">projects</a> 
             </div>
             <div class="row">
                 <div class="col-md-2">
@@ -182,12 +182,14 @@
                         <!-- empty column-->
                     </div><!-- /.column-->
                     <div class="col-xs-4 text-center">
-                        <a href="http://overture.me/annielin" target="_blank">
-                            <img class="img-responsive" src= "img/about.png" alt="about">
-                        </a>
+                        <br>
                         <a class="btn btn-default btn-sm" href="#coffee" data-toggle="modal"> 
                             <i class="fa fa-coffee"></i> 
                             Coffee Appointments
+                        </a>
+                        <br><br>
+                        <a href="http://overture.me/annielin" target="_blank">
+                            <img class="img-responsive" src= "img/about.png" alt="about">
                         </a>
                     </div><!-- /.column-->
                     <div class="col-xs-4">
@@ -213,7 +215,7 @@
                     </div><!-- /.column-->
                 </div><!-- /.row--> <!-- ./ Large Screens -->
                 <!-- Small Screens -->
-                <div class="row hidden-lg text-center">
+                <div class="row hidden-lg">
                     <div class="col-xs-2">
                         <!-- empty column-->
                     </div><!-- /.column-->
