--- a/index.html
+++ b/index.html
@@ -181,13 +181,8 @@
                     <div class="col-xs-2">
                         <!-- empty column-->
                     </div><!-- /.column-->
-                    <div class="col-xs-4 text-center">
+                    <div class="col-xs-4">
                         <br>
-                        <a class="btn btn-default btn-sm" href="#coffee" data-toggle="modal"> 
-                            <i class="fa fa-coffee"></i> 
-                            Coffee Appointments
-                        </a>
-                        <br><br>
                         <a href="http://overture.me/annielin" target="_blank">
                             <img class="img-responsive" src= "img/about.png" alt="about">
                         </a>
@@ -208,6 +203,10 @@
                             <li>rubik's cubes</li>
                             <li>arabesques</li>
                             <li>making peace signs</li>
+                            <li><a class="btn btn-default btn-sm" href="#coffee" data-toggle="modal"> 
+                            <i class="fa fa-coffee"></i> 
+                            coffee chats</li>
+                        </a>
                         </ul>
                     </div><!-- /.column-->
                     <div class="col-xs-2">
