--- a/index.html
+++ b/index.html
@@ -203,10 +203,7 @@
                             <li>rubik's cubes</li>
                             <li>arabesques</li>
                             <li>making peace signs</li>
-                            <li><a class="btn btn-default btn-sm" href="#coffee" data-toggle="modal"> 
-                            <i class="fa fa-coffee"></i> 
-                            coffee chats</li>
-                        </a>
+                            <a class="btn btn-default btn-sm" href="#coffee" data-toggle="modal" style="font-size: 8px;"><i class="fa fa-coffee"></i>coffee chats</a>
                         </ul>
                     </div><!-- /.column-->
                     <div class="col-xs-2">
