--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
             <div class="container">
                 <img class="img-responsive" src= "img/table.png" width="500" height="475" style="margin: 0 auto;" usemap="#table" alt="home">
                 <map name="table">
-                    <area shape="rect" coords="250,200,325,230" href="#about" alt="about">
+                    <!-- <area shape="rect" coords="250,200,325,230" href="#home" alt="home"> -->
                     <area shape="rect" coords="115,140,190,175" href="#resume" alt="resume">
                     <area shape="rect" coords="200,80,275,125" href="#projects" alt="projects">
-                    <area shape="rect" coords="340,125,400,160" href="#about" alt="more">
+                    <area shape="rect" coords="340,125,400,160" href="#about" alt="about">
                 </map>
             </div><!-- /.container-->
         </div><!-- /.section-->
