--- a/index.html
+++ b/index.html
@@ -386,6 +386,12 @@
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
+            <a href="mailto:theannielin@gmail.com?subject=Coffee%20Scheduling&body=Note-%20Please%20fill%20out:%0A%0AName:%20%0ADates/Times:%20%0ALocation:%20%0APhone:%20%0A"> 
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-coffee fa-stack-1x fa-inverse"></i>
+                </span>
+            </a>
             <a href="http://www.instagram.com/theannielin" target="_blank"> 
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
