--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
             <br>
             <div style="font-size:30px; font-family: passiontea;">
                 <a class="page-scroll" href="#home">home</a> | 
-                <a class="page-scroll" href="#about">about</a> | 
+                <a class="page-scroll" href="#about">about</a> 
                 <a class="page-scroll" href="#home" id="cog">
                     <i class="fa fa-cog fa-spin fa-2x"></i>
                 </a>
-                <a class="page-scroll" href="#resume">resume</a> 
+                <a class="page-scroll" href="#resume">resume</a> |  
                 <a class="page-scroll" href="#projects">projects</a> 
             </div>
             <div class="row">
