--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
                 <a class="page-scroll" href="#home" id="cog">
                     <i class="fa fa-cog fa-spin fa-2x"></i>
                 </a>
-                <a class="page-scroll" href="#resume">resume</a>|  
-                <a href="mailto:theannielin@gmail.com">contact</a> 
+                <a class="page-scroll" href="#resume">resume</a> |  
+                <a href="mailto:theannielin@gmail.com">e-mail</a> 
             </div>
             <div class="row">
                 <div class="col-md-2">
@@ -368,12 +368,6 @@
     <!-- Footer -->
     <nav class="navbar navbar-default navbar-fixed-bottom head-foot hidden-xs">
         <div class="container text-center" style="font-size:10px;">
-            <a href="mailto:theannielin@gmail.com"> 
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
-                </span>
-            </a>
             <a href="http://github.com/theannielin" target="_blank"> 
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
