--- a/index.html
+++ b/index.html
@@ -444,12 +444,12 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <div class="modal-body">
-                            <h1 style="font-size:13px;">Hi! I'm Annie!<br>
+                            <h1 style="font-size:13px;" class="no-margin">Hi! I'm Annie!<br>
                             I'm always excited to meet (or re-meet) people.<br>
                             I would love to have a chat over coffee<br>
                             (or any other beverage of your choice).<br>
                             Let's grab a drink!<br></h1>
-                            <div style="font-size:25px;">
+                            <div style="font-size:20px;">
                                 <a href="mailto:theannielin@gmail.com?subject=Coffee%20Scheduling&body=Note-%20Please%20fill%20out:%0A%0AName:%20%0ADates/Times:%20%0ALocation:%20%0APhone:%20%0A"> 
                                     <span class="fa-stack fa-lg">
                                       <i class="fa fa-circle fa-stack-2x"></i>
@@ -457,7 +457,7 @@
                                     </span>
                                 </a>
                             </div>
-                            <h1 style="font-size:13px;">I will e-mail back you to<br>either confirm or reschedule!</h1>
+                            <h1 style="font-size:13px;" class="no-margin">I will e-mail back you to<br>either confirm or reschedule!</h1>
                             <button type="button" class="btn btn-default" data-dismiss="modal">
                                 <i class="fa fa-times"></i> Close Window</button>
                         </div>
