--- a/index.html
+++ b/index.html
@@ -299,11 +299,9 @@
         <!-- Projects -->
         <div class="section">
             <div class="container">
-                <div class="row">
-                    <div class="col-xs-3">
-                        <!-- empty column-->
-                    </div><!-- /.column-->
-                    <div class="col-xs-6 text-center">
+                <!-- Large devices-->
+                <div class="row hidden-md hidden-sm">
+                    <div class="col-xs-6 text-center col-xs-offset-3">
                         <br>
                         <a class="btn btn-default btn-sm no-margin" href="http://github.com/theannielin" target="_blank">
                             <i class="fa fa-github-alt"></i> 
@@ -355,10 +353,120 @@
                             </div><!-- /.column-->
                         </div><!-- /.row-->
                     </div><!-- /.column-->
-                    <div class="col-xs-3">
-                        <!-- empty column-->
+                </div><!-- /.row-->
+                <!-- /.large devices-->
+                <!-- Medium devices-->
+                <div class="row hidden-lg hidden-sm">
+                    <div class="col-xs-7 text-center col-center">
+                        <br>
+                        <a class="btn btn-default btn-sm no-margin" href="http://github.com/theannielin" target="_blank">
+                            <i class="fa fa-github-alt"></i> 
+                            Fork Me on Github
+                        </a><br><br>
+                        <div class="row">
+                            <div class="col-xs-3">
+                                <a href="http://www.wecodeharvard.com/" target="_blank">
+                                    <img class="img-responsive proj" src="img/proj/wecode.png" alt="wecode">
+                                </a>
+                            </div><!-- /.column-->
+                            <div class="col-xs-3">
+                                <a href="http://www.projectimuse.org/" target="_blank">
+                                    <img class="img-responsive proj" src="img/proj/imuse.png" alt="imuse">
+                                </a>
+                            </div><!-- /.column-->
+                            <div class="col-xs-3">
+                                <a href="works/cs51project.zip" download>
+                                    <img class="img-responsive proj" src="img/proj/51.png" alt="cs51">
+                                </a>
+                            </div><!-- /.column-->
+                            <div class="col-xs-3">
+                                <a href="works/cs143project.zip" download>
+                                    <img class="img-responsive proj" src="img/proj/143.png" alt="cs143">
+                                </a>
+                            </div><!-- /.column-->
+                        </div><!-- /.row-->
+                        <br>
+                        <div class="row">
+                            <div class="col-xs-3">
+                                <a href="http://www.harvardtcs.org/" target="_blank">
+                                    <img class="img-responsive proj" src="img/proj/tcs.png" alt="taiwan">
+                                </a>
+                            </div><!-- /.column-->
+                            <div class="col-xs-3">
+                                <a href="http://brushup.me/" target="_blank">
+                                    <img class="img-responsive proj" src="img/proj/brushup.png" alt="brushup">
+                                </a>
+                            </div><!-- /.column-->
+                            <div class="col-xs-3">
+                                <a href="http://www.hcs.harvard.edu/firstgen/" target="_blank">
+                                    <img class="img-responsive proj" src="img/proj/fgsu.png" alt="firstgen">
+                                </a>
+                            </div><!-- /.column-->
+                            <div class="col-xs-3">
+                                <a href="#design" data-toggle="modal" data-backdrop="false">
+                                    <img class="img-responsive proj" src="img/proj/design.png" alt="design">
+                                </a>
+                            </div><!-- /.column-->
+                        </div><!-- /.row-->
                     </div><!-- /.column-->
                 </div><!-- /.row-->
+                <!-- /.medium devices-->
+                <!-- Small devices-->
+                <div class="row hidden-lg hidden-md">
+                    <div class="col-xs-9 text-center col-center">
+                        <br>
+                        <a class="btn btn-default btn-sm no-margin" href="http://github.com/theannielin" target="_blank">
+                            <i class="fa fa-github-alt"></i> 
+                            Fork Me on Github
+                        </a><br><br>
+                        <div class="row">
+                            <div class="col-xs-3">
+                                <a href="http://www.wecodeharvard.com/" target="_blank">
+                                    <img class="img-responsive proj" src="img/proj/wecode.png" alt="wecode">
+                                </a>
+                            </div><!-- /.column-->
+                            <div class="col-xs-3">
+                                <a href="http://www.projectimuse.org/" target="_blank">
+                                    <img class="img-responsive proj" src="img/proj/imuse.png" alt="imuse">
+                                </a>
+                            </div><!-- /.column-->
+                            <div class="col-xs-3">
+                                <a href="works/cs51project.zip" download>
+                                    <img class="img-responsive proj" src="img/proj/51.png" alt="cs51">
+                                </a>
+                            </div><!-- /.column-->
+                            <div class="col-xs-3">
+                                <a href="works/cs143project.zip" download>
+                                    <img class="img-responsive proj" src="img/proj/143.png" alt="cs143">
+                                </a>
+                            </div><!-- /.column-->
+                        </div><!-- /.row-->
+                        <br>
+                        <div class="row">
+                            <div class="col-xs-3">
+                                <a href="http://www.harvardtcs.org/" target="_blank">
+                                    <img class="img-responsive proj" src="img/proj/tcs.png" alt="taiwan">
+                                </a>
+                            </div><!-- /.column-->
+                            <div class="col-xs-3">
+                                <a href="http://brushup.me/" target="_blank">
+                                    <img class="img-responsive proj" src="img/proj/brushup.png" alt="brushup">
+                                </a>
+                            </div><!-- /.column-->
+                            <div class="col-xs-3">
+                                <a href="http://www.hcs.harvard.edu/firstgen/" target="_blank">
+                                    <img class="img-responsive proj" src="img/proj/fgsu.png" alt="firstgen">
+                                </a>
+                            </div><!-- /.column-->
+                            <div class="col-xs-3">
+                                <a href="#design" data-toggle="modal" data-backdrop="false">
+                                    <img class="img-responsive proj" src="img/proj/design.png" alt="design">
+                                </a>
+                            </div><!-- /.column-->
+                        </div><!-- /.row-->
+                    </div><!-- /.column-->
+                </div><!-- /.row-->
+                <!-- /.small devices-->
             </div><!-- /.container-->
         </div><!-- /.section-->
 
