--- a/index.html
+++ b/index.html
@@ -89,16 +89,16 @@
                   <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
-            <a href="http://github.com/theannielin" target="_blank"> 
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-github-alt fa-stack-1x fa-inverse"></i>
-                </span>
-            </a>
             <a href="http://www.linkedin.com/in/theannielin/" target="_blank"> 
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                </span>
+            </a>
+            <a href="http://github.com/theannielin" target="_blank"> 
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-github-alt fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
             <br>
@@ -165,7 +165,7 @@
             <div class="container">
                 <img class="img-responsive" src= "img/table.png" width="500" height="475" style="margin: 0 auto;" usemap="#table" alt="home">
                 <map name="table">
-                    <!-- <area shape="rect" coords="250,200,325,230" href="#home" alt="home"> -->
+                    <area shape="rect" coords="250,200,325,230" href="#coffee" data-toggle="modal" alt="hi">
                     <area shape="rect" coords="115,140,190,175" href="#resume" alt="resume">
                     <area shape="rect" coords="200,80,275,125" href="#projects" alt="projects">
                     <area shape="rect" coords="340,125,400,160" href="#about" alt="about">
@@ -476,16 +476,16 @@
     <!-- Footer -->
     <nav class="navbar navbar-default navbar-fixed-bottom head-foot hidden-xs">
         <div class="container text-center" style="font-size:10px;">
-            <a href="http://github.com/theannielin" target="_blank"> 
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-github-alt fa-stack-1x fa-inverse"></i>
-                </span>
-            </a>
             <a href="http://www.linkedin.com/in/theannielin/" target="_blank"> 
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                </span>
+            </a>
+            <a href="http://github.com/theannielin" target="_blank"> 
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-github-alt fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
             <a href="mailto:theannielin@gmail.com?subject=Coffee%20Scheduling&body=Note-%20Please%20fill%20out:%0A%0AName:%20%0ADates/Times:%20%0ALocation:%20%0APhone:%20%0A"> 
