--- a/index.html
+++ b/index.html
@@ -526,13 +526,163 @@
                 </div>
             </div>
             <div class="container">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                        <div class="modal-body">
-                            <iframe style="border:none;" src="http://files.photosnack.com/iframejs/embed.html?hash=pt9529ii&t=1400885491" width="300" height="300" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" ></iframe>
-                            <br><br>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close Window</button>
-                        </div>
+                <div class="modal-body">
+                    <div class="row col-xs-offset-2 hidden-xs">
+                        <div class="col-xs-3">
+                            <h1>Docs</h1>
+                            <!-- Carousel 1-->
+                            <div id="carousel1" class="carousel slide" data-ride="carousel">
+                              <!-- Indicators -->
+                              <ol class="carousel-indicators">
+                                <li data-target="#carousel1" data-slide-to="0" class="active"></li>
+                                <li data-target="#carousel1" data-slide-to="1"></li>
+                                <li data-target="#carousel1" data-slide-to="2"></li>
+                                <li data-target="#carousel1" data-slide-to="3"></li>
+                                <li data-target="#carousel1" data-slide-to="4"></li>
+                              </ol>
+                              <!-- Wrapper for slides -->
+                              <div class="carousel-inner" role="listbox">
+                                <div class="item active">
+                                  <img src="works/art/documents/wics1.png" alt="wics1">
+                                </div>
+                                <div class="item">
+                                  <img src="works/art/documents/showa.png" alt="showa">
+                                </div>
+                                <div class="item">
+                                  <img src="works/art/documents/fgsu.png" alt="fgsu">
+                                </div>
+                                <div class="item">
+                                  <img src="works/art/documents/wecode.png" alt="wecode">
+                                </div>
+                                <div class="item">
+                                  <img src="works/art/documents/wics2.png" alt="wics2">
+                                </div>
+                              </div>
+                              <!-- Controls -->
+                              <a class="left carousel-control" href="#carousel1" role="button" data-slide="prev">
+                                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                              </a>
+                              <a class="right carousel-control" href="#carousel1" role="button" data-slide="next">
+                                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                              </a>
+                            </div><!-- /.carousel1-->
+                        </div><!-- /.column-->
+                        <div class="col-xs-3">
+                            <h1>Logos</h1>
+                            <!-- Carousel 2-->
+                            <div id="carousel2" class="carousel slide" data-ride="carousel">
+                              <!-- Indicators -->
+                              <ol class="carousel-indicators">
+                                <li data-target="#carousel2" data-slide-to="0" class="active"></li>
+                                <li data-target="#carousel2" data-slide-to="1"></li>
+                                <li data-target="#carousel2" data-slide-to="2"></li>
+                                <li data-target="#carousel2" data-slide-to="3"></li>
+                                <li data-target="#carousel2" data-slide-to="4"></li>
+                                <li data-target="#carousel2" data-slide-to="5"></li>
+                                <li data-target="#carousel2" data-slide-to="6"></li>
+                                <li data-target="#carousel2" data-slide-to="7"></li>
+                                <li data-target="#carousel2" data-slide-to="8"></li>
+                              </ol>
+                              <!-- Wrapper for slides -->
+                              <div class="carousel-inner" role="listbox">
+                                <div class="item active">
+                                  <img src="works/art/logo/wics.png" alt="wics">
+                                </div>
+                                <div class="item">
+                                  <img src="works/art/logo/fgsu.png" alt="fgsu">
+                                </div>
+                                <div class="item">
+                                  <img src="works/art/logo/paz.png" alt="wics">
+                                </div>
+                                <div class="item">
+                                  <img src="works/art/logo/tcs1.png" alt="tcs1">
+                                </div>
+                                <div class="item">
+                                  <img src="works/art/logo/tcs2.png" alt="tcs2">
+                                </div>
+                                <div class="item">
+                                  <img src="works/art/logo/seas1.png" alt="seas1">
+                                </div>
+                                <div class="item">
+                                  <img src="works/art/logo/seas2.png" alt="seas2">
+                                </div>
+                                <div class="item">
+                                  <img src="works/art/logo/seas3.png" alt="seas3">
+                                </div>
+                                <div class="item">
+                                  <img src="works/art/logo/awh.png" alt="awh">
+                                </div>
+                              </div>
+                              <!-- Controls -->
+                              <a class="left carousel-control" href="#carousel2" role="button" data-slide="prev">
+                                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                              </a>
+                              <a class="right carousel-control" href="#carousel2" role="button" data-slide="next">
+                                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                              </a>
+                            </div><!-- /.carousel2 -->
+                        </div><!-- /.column-->
+                        <div class="col-xs-3">
+                            <h1>Sculpture</h1>
+                            <!-- Carousel 3-->
+                            <div id="carousel3" class="carousel slide" data-ride="carousel">
+                              <!-- Indicators -->
+                              <ol class="carousel-indicators">
+                                <li data-target="#carousel3" data-slide-to="0" class="active"></li>
+                                <li data-target="#carousel3" data-slide-to="1"></li>
+                                <li data-target="#carousel3" data-slide-to="2"></li>
+                                <li data-target="#carousel3" data-slide-to="3"></li>
+                                <li data-target="#carousel3" data-slide-to="4"></li>
+                                <li data-target="#carousel3" data-slide-to="5"></li>
+                                <li data-target="#carousel3" data-slide-to="6"></li>
+                                <li data-target="#carousel3" data-slide-to="7"></li>
+                                <li data-target="#carousel3" data-slide-to="8"></li>
+                              </ol>
+                              <!-- Wrapper for slides -->
+                              <div class="carousel-inner" role="listbox">
+                                <div class="item active">
+                                  <img src="works/art/sculpture/1.png" alt="sculpture">
+                                </div>
+                                <div class="item">
+                                  <img src="works/art/sculpture/2.png" alt="sculpture">
+                                </div>
+                                <div class="item">
+                                  <img src="works/art/sculpture/3.png" alt="sculpture">
+                                </div>
+                                <div class="item">
+                                  <img src="works/art/sculpture/4.png" alt="sculpture">
+                                </div>
+                                <div class="item">
+                                  <img src="works/art/sculpture/5.png" alt="sculpture">
+                                </div>
+                                <div class="item">
+                                  <img src="works/art/sculpture/6.png" alt="sculpture">
+                                </div>
+                                <div class="item">
+                                  <img src="works/art/sculpture/7.png" alt="sculpture">
+                                </div>
+                                <div class="item">
+                                  <img src="works/art/sculpture/8.png" alt="sculpture">
+                                </div>
+                                <div class="item">
+                                  <img src="works/art/sculpture/9.png" alt="sculpture">
+                                </div>
+                              </div>
+                              <!-- Controls -->
+                              <a class="left carousel-control" href="#carousel3" role="button" data-slide="prev">
+                                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                              </a>
+                              <a class="right carousel-control" href="#carousel3" role="button" data-slide="next">
+                                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                              </a>
+                            </div><!-- /.carousel3-->
+                        </div><!-- /.column-->
                     </div>
                 </div>
             </div>
