--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="container text-center" style="font-size:13px;">
             <br><br><br>
             <h1>HI, I'M <a href="works/AnnieLinResume.pdf" target="_blank">ANNIE LIN</a></h1>
-            <a href="mailto:theannielin@gmail.com"> 
+            <a href="mailto:hello@anniel.in"> 
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
@@ -141,7 +141,7 @@
                     <i class="fa fa-cog fa-spin fa-2x"></i>
                 </a>
                 <a class="page-scroll" href="#resume">resume</a> |  
-                <a href="mailto:theannielin@gmail.com">e-mail</a> 
+                <a href="mailto:hello@anniel.in">e-mail</a> 
             </div>
             <div class="row">
                 <div class="col-md-2">
@@ -488,7 +488,7 @@
                   <i class="fa fa-github-alt fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
-            <a href="mailto:theannielin@gmail.com?subject=Coffee%20Scheduling&body=Note-%20Please%20fill%20out:%0A%0AName:%20%0ADates/Times:%20%0ALocation:%20%0APhone:%20%0A"> 
+            <a href="mailto:hello@anniel.in?subject=Coffee%20Scheduling&body=Note-%20Please%20fill%20out:%0A%0AName:%20%0ADates/Times:%20%0ALocation:%20%0APhone:%20%0A"> 
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-coffee fa-stack-1x fa-inverse"></i>
@@ -708,7 +708,7 @@
                             (or any other beverage of your choice).<br>
                             Let's grab a drink!<br></h1>
                             <div style="font-size:20px;">
-                                <a href="mailto:theannielin@gmail.com?subject=Coffee%20Scheduling&body=Note-%20Please%20fill%20out:%0A%0AName:%20%0ADates/Times:%20%0ALocation:%20%0APhone:%20%0A"> 
+                                <a href="mailto:hello@anniel.in?subject=Coffee%20Scheduling&body=Note-%20Please%20fill%20out:%0A%0AName:%20%0ADates/Times:%20%0ALocation:%20%0APhone:%20%0A"> 
                                     <span class="fa-stack fa-lg">
                                       <i class="fa fa-circle fa-stack-2x"></i>
                                       <i class="fa fa-coffee fa-stack-1x fa-inverse"></i>
