--- a/test.html
+++ b/test.html
@@ -2,12 +2,11 @@
 <html>
 <body>
 
-Annie Lin | Harvard College 2017 
-A.B. Candidate in Computer Science
-
-⚙  www.anniel.in
-✎  hello@anniel.in
-✆  (267) 800-6188
+Annie Lin | Harvard College 2017<br>
+A.B. Candidate in Computer Science<br><br>
+⚙  www.anniel.in<br>
+✎  hello@anniel.in<br>
+✆  (267) 800-6188<br>
 
 </body>
 </html>
