--- a/works/forest/index.html
+++ b/works/forest/index.html
@@ -80,13 +80,13 @@
                 <div class="col-sm-3">
                     <h2>1700</h2>
                     <img class="img-responsive" src= "img/1700.jpg" alt="1700 Diorama">
-                    <a class="air" data-toggle="modal" data-target="#1700air"> 
+                    <a class="air" data-toggle="modal" href="#1700air"> 
                         <span class="fa-stack fa-lg">
                           <i class="fa fa-circle fa-stack-2x"></i>
                           <i class="fa fa-cloud fa-stack-1x fa-inverse"></i>
                         </span>
                     </a>
-                    <a class="bio" data-toggle="modal" data-target="#1700bio"> 
+                    <a class="bio" data-toggle="modal" href="#1700bio"> 
                         <span class="fa-stack fa-lg">
                           <i class="fa fa-circle fa-stack-2x"></i>
                           <i class="fa fa-leaf fa-stack-1x fa-inverse"></i>
