--- a/mobile/index.html
+++ b/mobile/index.html
@@ -21,7 +21,9 @@
     <link href="css/main.css" rel="stylesheet">
 
     <!-- Font-Awesome Icons -->
-    <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
+    <!-- If you want to test the icons on your home computer, uncomment the followining and comment the line below 
+    <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css"> -->
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
