--- a/index.html
+++ b/index.html
@@ -342,8 +342,8 @@
                                 </a>
                             </div><!-- /.column-->
                             <div class="col-xs-3">
-                                <a href="http://www.hcs.harvard.edu/firstgen/" target="_blank">
-                                    <img class="img-responsive proj" src="img/proj/fgsu.png" alt="firstgen">
+                                <a href="http://harvardforest.fas.harvard.edu/interactive-dioramas" target="_blank">
+                                    <img class="img-responsive proj" src="img/proj/forest.png" alt="forest">
                                 </a>
                             </div><!-- /.column-->
                             <div class="col-xs-3">
@@ -398,8 +398,8 @@
                                 </a>
                             </div><!-- /.column-->
                             <div class="col-xs-3">
-                                <a href="http://www.hcs.harvard.edu/firstgen/" target="_blank">
-                                    <img class="img-responsive proj" src="img/proj/fgsu.png" alt="firstgen">
+                                <a href="http://harvardforest.fas.harvard.edu/interactive-dioramas" target="_blank">
+                                    <img class="img-responsive proj" src="img/proj/forest.png" alt="forest">
                                 </a>
                             </div><!-- /.column-->
                             <div class="col-xs-3">
@@ -454,8 +454,8 @@
                                 </a>
                             </div><!-- /.column-->
                             <div class="col-xs-3">
-                                <a href="http://www.hcs.harvard.edu/firstgen/" target="_blank">
-                                    <img class="img-responsive proj" src="img/proj/fgsu.png" alt="firstgen">
+                                <a href="http://harvardforest.fas.harvard.edu/interactive-dioramas" target="_blank">
+                                    <img class="img-responsive proj" src="img/proj/forest.png" alt="forest">
                                 </a>
                             </div><!-- /.column-->
                             <div class="col-xs-3">
