--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
                         </ul>
                         <h1 class="no-margin">Work Experience </h1>
                         <ul class="list">
+                            <li>Google</li>
                             <li>Japan Digital Archives</li>
                             <li>Cabot Science Library (Harvard University)</li>
                             <li>Harvard Forest</li>
