--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                         <h2 class="no-margin">Cambridge, MA | A.B. Computer Science, Citation in Japanese (Expected Graduation: May 2017)</h2>
                         <ul class="list hidden-sm hidden-md">
                             <li>Taiwanese Cultural Society (Co-President)</li>
-                            <li>Women in Computer Science (Publicity Chair)</li>
+                            <li>Women in Computer Science (Vice-President)</li>
                             <li>First Generation Student Union (Public Relations Chair)</li>
                             <li>Rubik's Cube Club (Secretary)</li>
                             <li>IMUSE (Design Chair)</li>
