--- a/index.html
+++ b/index.html
@@ -256,10 +256,11 @@
                         </a>
                         <br>
                         <h1 class="no-margin"> Harvard College </h1>
-                        <h2 class="no-margin">Cambridge, MA | A.B. Computer Science, Citation in Japanese (Expected Graduation: May 2017)</h2>
+                        <h2 class="no-margin">Cambridge, MA | A.B. Computer Science (Expected Graduation: May 2017)</h2>
                         <ul class="list hidden-sm hidden-md">
                             <li>Taiwanese Cultural Society (Co-President)</li>
                             <li>Women in Computer Science (Vice-President)</li>
+                            <li>Digital Literacy Project (Director of Design/Branding)</li>
                             <li>First Generation Student Union (Public Relations Chair)</li>
                             <li>Rubik's Cube Club (Secretary)</li>
                             <li>IMUSE (Design Chair)</li>
