--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
                   <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
-            <a href="http://www.thelittleorphanannie.tumblr.com/" target="_blank"> 
+            <a href="https://twitter.com/theannielin" target="_blank"> 
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-tumblr fa-stack-1x fa-inverse"></i>
+                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
             <a href="http://www.youtube.com/channel/UC4xmxjVcO3qGnQ7Y_hZlDnw" target="_blank"> 
@@ -502,10 +502,10 @@
                   <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
-            <a href="http://thelittleorphanannie.tumblr.com/archive" target="_blank"> 
+            <a href="https://twitter.com/theannielin" target="_blank"> 
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-tumblr fa-stack-1x fa-inverse"></i>
+                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
             <a href="http://www.youtube.com/channel/UC4xmxjVcO3qGnQ7Y_hZlDnw" target="_blank"> 
