--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@
                         </a><br><br>
                         <div class="row">
                             <div class="col-xs-3">
-                                <a href="http://www.wecodeharvard.com/" target="_blank">
-                                    <img class="img-responsive proj" src="img/proj/wecode.png" alt="wecode">
+                                <a href="http://www.stakattak.me/" target="_blank">
+                                    <img class="img-responsive proj" src="img/proj/stack.png" alt="StakAttak">
                                 </a>
                             </div><!-- /.column-->
                             <div class="col-xs-3">
