--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     </div><!-- /.column-->
                     <div class="col-xs-4">
                         <br>
-                        <a href="http://overture.me/annielin" target="_blank">
+                        <a href="https://vimeo.com/79250988" target="_blank">
                             <img class="img-responsive" src= "img/about.png" alt="about">
                         </a>
                     </div><!-- /.column-->
