--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                                 </a>
                             </div><!-- /.column-->
                             <div class="col-xs-3">
-                                <a href="http://www.projectimuse.org/" target="_blank">
+                                <a href="http://projectimuse.github.io/" target="_blank">
                                     <img class="img-responsive proj" src="img/proj/imuse.png" alt="imuse">
                                 </a>
                             </div><!-- /.column-->
@@ -367,12 +367,12 @@
                         </a><br><br>
                         <div class="row">
                             <div class="col-xs-3">
-                                <a href="http://www.wecodeharvard.com/" target="_blank">
+                                <a href="http://wecodeharvard.github.io/" target="_blank">
                                     <img class="img-responsive proj" src="img/proj/wecode.png" alt="wecode">
                                 </a>
                             </div><!-- /.column-->
                             <div class="col-xs-3">
-                                <a href="http://www.projectimuse.org/" target="_blank">
+                                <a href="http://projectimuse.github.io/" target="_blank">
                                     <img class="img-responsive proj" src="img/proj/imuse.png" alt="imuse">
                                 </a>
                             </div><!-- /.column-->
@@ -423,12 +423,12 @@
                         </a><br><br>
                         <div class="row">
                             <div class="col-xs-3">
-                                <a href="http://www.wecodeharvard.com/" target="_blank">
+                                <a href="http://wecodeharvard.github.io/" target="_blank">
                                     <img class="img-responsive proj" src="img/proj/wecode.png" alt="wecode">
                                 </a>
                             </div><!-- /.column-->
                             <div class="col-xs-3">
-                                <a href="http://www.projectimuse.org/" target="_blank">
+                                <a href="http://projectimuse.github.io/" target="_blank">
                                     <img class="img-responsive proj" src="img/proj/imuse.png" alt="imuse">
                                 </a>
                             </div><!-- /.column-->
