--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <div class="col-xs-4">
                         <h1>SUMMARY</h1>
                         <p>Hi! I'm Annie Lin aka the girl with bangs.<br> 
-                        NYC-born and Philly-raised. Alumni of the 272nd class of Central. (2nd oldest public high school in the country!) Proud bearer of a simian line. Current senior at Harvard studying CS. Artist, Scholar, & so much more!
+                        NYC-born and Philly-raised. Alumni of the 272nd class of Central. (2nd oldest public high school in the country!) Proud bearer of a simian line. Current senior at Harvard studying CS. Artist, scholar, tourist & so much more!
                         </p>
                         <h1>I ENJOY:</h1>
                         <ul class="list">
